fixed sizing of main description container, font sizing, and line spacing to be dependent on viewport dimensions

--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
   src: url(ChettaVissto.woff); /* url of the font */
 }
 
+/* === Global CSS Reset === */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;   /* ensures padding + border stay inside width/height */
+  margin: 0;
+  padding: 0;
+}
+
 /* All colors etc 
 saved: #9198e5, #a3caae
 */
@@ -12,7 +21,7 @@ saved: #9198e5, #a3caae
     --font-size-heading: 5rem;
     --font-size-subtitle: 1.5rem;
     --font-size-subtitle-small: 1rem;
-    --font-size-main: 40vw;
+    --font-size-main: clamp(1rem, calc(1vw + 1vh), 2rem);
     --font-size-button: 2rem;
     --font-size-nav-mobile: 2.4rem;
     --font-weight-normal: 400;
@@ -34,7 +43,7 @@ saved: #9198e5, #a3caae
     --text-transform-link-hover: uppercase;
     --spacing-small: 0.5rem;
     --spacing-medium: 1.5rem;
-    --spacing-large: 2rem;
+    --spacing-large: calc(var(--font-size-main)*1.5);
     --spacing-extra-large: 3rem;
     --max-width-content: 60dvw;
     --gallery-gap: calc(var(--spacing-small) * 2);
@@ -72,6 +81,8 @@ body::after {
   text-align: center;
   font-family: "Arial";
   z-index: 1;
+  /* background color for debugging
+  background: purple; */
 }
 
 #name, #name-button {
@@ -80,11 +91,13 @@ body::after {
   text-transform: var(--text-transform-h1);
   border-radius: 30px;
   margin: 0px auto;
-  margin-top: 0.5em;
+  margin-top: 1vh;
   margin-bottom: 0.01em;
   background: none;
   border: none;
   font-weight: bold;
+  /* background color for debugging
+  background: blue; */
 }
 
 input:focus, button:focus a:focus {
@@ -111,61 +124,73 @@ input:focus, button:focus a:focus {
   z-index: 1;
 }
 
-#main-desc {
+.main-desc-container {
   position: absolute;
   margin-inline: auto;
   left: 0;
   right: 0;
-  top: calc(25%);
-  height: calc(50%);
-  width: calc(50%);
+  top: 17vh;
+  bottom: 25vh;
+  height: 70vh;
+  width: 75vw;
+  /* background: green; /*background color for debugging */
+}
+
+#main-desc {
+  position: absolute;
+  inset: 0;
   border: none;
-  background: none;
+  width: calc(100% - 60px);
+  height: calc(100% - 60px);
+  margin: 30px;
+  border-radius: 50px;
+  background: #ffffff50;
+  backdrop-filter: blur (10px) url(#bgNoiseFilter);
   z-index: 1;
 }
 
 #intro-text {
-  font-size: (--font-size-main);
+  font-size: var(--font-size-main);
   color: var(--color-subtitle-dark);
   position: absolute;
-  top: 0;
+  top: 30px;
   left: 30px;
   bottom: calc(40%);
-  height: calc(50%);
+  max-height: calc(45%);
   max-width: calc(30%);
   line-height: var(--spacing-large);
 }
 
 #hobbies-text {
-  font-size: (--font-size-main);
+  font-size: var(--font-size-main);
   color: var(--color-subtitle-dark);
   position: absolute;
-  padding-top: 15px;
-  right: 20px;
+  right: 30px;
+  bottom: 30px;
   text-align: right;
-  bottom: 0;
-  height: calc(45%);
+  max-height: 45%;
   max-width: calc(30%);
   line-height: var(--spacing-large);
 }
 
 #kaaterskills {
   position: absolute;
-  height: 30vh;
-  bottom: 0;
-  right: calc(70%);
+  height: calc(50%);
+  bottom: 4%;
+  left: 4%;
 }
 
 #potato-chip {
   position: absolute;
-  height: 25vh;
-  right: 0%;
+  height: calc(50%);
+  right: 4%;
+  top: 4%;
 }
 
 #skating {
   position: absolute;
-  height: 27vw;
-  top: 5%;
+  height: calc(30%);
+  top: 2%;
   margin-inline: auto;
   left: 0;
   right: 0;
@@ -177,7 +202,7 @@ input:focus, button:focus a:focus {
   margin-inline: auto;
   left: 0;
   right: 0;
-  top: calc(37%);
+  top: calc(35%);
 }
 
 #family {
@@ -186,7 +211,7 @@ input:focus, button:focus a:focus {
   margin-inline: auto;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 2%;
 }
 
 #main-desc span{
